@@ -19,8 +19,7 @@ package erki.api.util;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.Collection;
-import java.util.LinkedList;
+import java.util.logging.Level;
 
 import javax.sound.sampled.AudioInputStream;
 import javax.sound.sampled.AudioSystem;
@@ -32,32 +31,83 @@ import javax.sound.sampled.UnsupportedAudioFileException;
 import javax.sound.sampled.DataLine.Info;
 
 /**
- * This class contains utility methods to play sound and music. If no audio device is present on a
+ * This class provides with a simple way to play back sound. If no audio device is present on a
  * system or the audio device is not accessible no sound is played and the first time this happens
- * an error message is printed to the log file.
+ * an error message is printed to the {@link Log}. There is intentionally no exception thrown to
+ * make this class failsafe to use. If you want to disable the spammy log output call
+ * {@link Log#setLevel(java.util.logging.Level)} with {@link Level#OFF}.
+ * <p>
+ * Note that actual playback only starts when this thread is started by calling {@link #start()}. If
+ * not stopped by use intervention this thread exits if the given sound file is played completely.
  * 
  * @author Edgar Kalkowski
  */
-public class SoundPlayer {
+public class SoundPlayer extends Thread {
     
-    static boolean warned = false;
+    private static final int DEFAULT_BUFFER_SIZE = 50000;
     
-    static final int BUFFER_SIZE = 50000;
+    private static boolean warned = false;
     
-    static final Collection<Thread> activeThreads = new LinkedList<Thread>();
+    private final File file;
+    
+    private final LineListener listener;
+    
+    private final int bufferSize;
+    
+    private boolean stopped = false;
     
     /**
-     * Plays a sound file.
+     * Create a new SoundPlayer.
      * 
      * @param file
-     *        An {@link File} object that denotes the sound file to play.
-     * @param listener
-     *        A {@link LineListener} that will be informed about the events that the playing of the
-     *        audio file generates. This way one can e.g. observer the point when the playback stops
-     *        because the file is finished.
+     *        The file to play back.
      */
-    public static synchronized void play(File file, LineListener listener) {
-        file = file.getAbsoluteFile();
+    public SoundPlayer(File file) {
+        this(file, null, DEFAULT_BUFFER_SIZE);
+    }
+    
+    /**
+     * Create a new SoundPlayer.
+     * 
+     * @param file
+     *        The file to play back.
+     * @param listener
+     *        The listener that shall be informed if e.g. the playback is finished.
+     */
+    public SoundPlayer(File file, LineListener listener) {
+        this(file, listener, DEFAULT_BUFFER_SIZE);
+    }
+    
+    /**
+     * Create a new SoundPlayer.
+     * 
+     * @param file
+     *        The file to play back.
+     * @param listener
+     *        The listener that shall be informed if e.g. the playback is finished.
+     * @param bufferSize
+     *        The buffer size to use when reading the sound file (see
+     *        {@link SourceDataLine#open(javax.sound.sampled.AudioFormat, int)} for details about
+     *        the buffer size).
+     */
+    public SoundPlayer(File file, LineListener listener, int bufferSize) {
+        this.file = file;
+        this.listener = listener;
+        this.bufferSize = bufferSize;
+    }
+    
+    /** Stop playback as soon as possible. Identical to {@link #stopPlayback()}. */
+    public void kill() {
+        stopPlayback();
+    }
+    
+    /** Stop playback as soon as possible. */
+    public void stopPlayback() {
+        stopped = true;
+    }
+    
+    @Override
+    public void run() {
         
         try {
             final AudioInputStream stream = AudioSystem.getAudioInputStream(file);
@@ -65,28 +115,34 @@ public class SoundPlayer {
             
             if (AudioSystem.isLineSupported(info)) {
                 
-                try {
-                    final SourceDataLine line = (SourceDataLine) AudioSystem.getLine(info);
-                    
-                    if (listener != null) {
-                        line.addLineListener(listener);
-                    }
-                    
-                    Log.debug("Opening and starting line.");
-                    line.open(stream.getFormat(), BUFFER_SIZE);
-                    line.start();
-                    SoundThread thread = new SoundThread(line, stream);
-                    Log.debug("Starting playback.");
-                    activeThreads.add(thread);
-                    thread.start();
-                } catch (LineUnavailableException e) {
-                    
-                    if (!warned) {
-                        warned = true;
-                        Log.error(e);
-                        Log.error("No sound will be played.");
-                    }
+                final SourceDataLine line = (SourceDataLine) AudioSystem.getLine(info);
+                
+                if (listener != null) {
+                    line.addLineListener(listener);
                 }
+                
+                Log.debug("Opening and starting line.");
+                line.open(stream.getFormat(), bufferSize);
+                line.start();
+                Log.debug("Starting playback.");
+                
+                int read = 0;
+                byte[] buffer = new byte[SoundPlayer.DEFAULT_BUFFER_SIZE];
+                
+                while ((read = stream.read(buffer, 0, SoundPlayer.DEFAULT_BUFFER_SIZE)) != -1
+                        && !stopped) {
+                    line.write(buffer, 0, read);
+                }
+                
+                if (stopped) {
+                    Log.debug("Sound was stopped.");
+                } else {
+                    Log.debug("Sound file is finished.");
+                }
+                
+                line.drain();
+                line.stop();
+                line.close();
                 
             } else {
                 
@@ -94,6 +150,14 @@ public class SoundPlayer {
                     warned = true;
                     Log.error("No sound output available! No sound will be played!");
                 }
+            }
+            
+        } catch (LineUnavailableException e) {
+            
+            if (!warned) {
+                warned = true;
+                Log.error(e);
+                Log.error("No sound will be played.");
             }
             
         } catch (UnsupportedAudioFileException e) {
@@ -112,77 +176,5 @@ public class SoundPlayer {
                 Log.error("No sound will be played.");
             }
         }
-    }
-    
-    /**
-     * Play a sound file.
-     * 
-     * @param file
-     *        The sound file to play.
-     */
-    public static synchronized void play(File file) {
-        play(file, null);
-    }
-    
-    /** Stop all playback. */
-    public static synchronized void stop() {
-        SoundThread[] threads = activeThreads.toArray(new SoundThread[0]);
-        
-        for (SoundThread thread : threads) {
-            thread.kill();
-        }
-    }
-}
-
-class SoundThread extends Thread {
-    
-    private SourceDataLine line;
-    private AudioInputStream stream;
-    private boolean stopped;
-    
-    public SoundThread(SourceDataLine line, AudioInputStream stream) {
-        this.line = line;
-        this.stream = stream;
-    }
-    
-    @Override
-    public void run() {
-        int read = 0;
-        byte[] buffer = new byte[SoundPlayer.BUFFER_SIZE];
-        
-        try {
-            
-            while ((read = stream.read(buffer, 0, SoundPlayer.BUFFER_SIZE)) != -1 && !stopped) {
-                line.write(buffer, 0, read);
-            }
-            
-            if (stopped) {
-                Log.debug("Sound was stopped.");
-            } else {
-                Log.debug("Sound file is finished.");
-            }
-            
-            line.drain();
-            line.stop();
-            line.close();
-            
-            synchronized (SoundPlayer.class) {
-                SoundPlayer.activeThreads.remove(this);
-            }
-            
-        } catch (IOException e) {
-            
-            if (!SoundPlayer.warned) {
-                SoundPlayer.warned = true;
-                Log.error(e);
-                Log.error("No further sound will be played!");
-            }
-        }
-        
-        Log.debug("Sound thread exited.");
-    }
-    
-    public void kill() {
-        stopped = true;
     }
 }
